tests/testcases/errors/BCE0005-2.boo
"""
BCE0005-2.boo(8,7): BCE0005: Unknown identifier: 'local'.
"""
block = do ():
	local = "foo"
	print(local)
	
print(local)
